GS-12047 Find a School: Change filter dropdown default names after user interaction - prevent text from wrapping.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -1594,15 +1594,11 @@ body.ie8 .btsSupplyListsTag .arrow {
 
 .filterCategory {
     height: 24px;
-    width: 114px;
-}
-
-.chrome .filterCategory {
-    width: 112px;
+    width: 117px;
 }
 
 .filterCategory .defaultText {
-    width: 72px;
+    width: 75px;
     padding: 3px 9px 3px 8px;
     background-color: white;
     border: 1px solid #A5D3E7;
@@ -1612,10 +1608,6 @@ body.ie8 .btsSupplyListsTag .arrow {
     -moz-border-radius-topleft: 3px;
     -moz-border-radius-bottomleft: 3px;
 
-}
-
-.chrome .filterCategory .defaultText {
-    width: 70px;
 }
 
 #slStylesV1-0 .filterCategory a {
@@ -1646,6 +1638,15 @@ body.ie8 .btsSupplyListsTag .arrow {
 
 #dropDown-FAS-3 {
     width: 178px;
+}
+
+#dropDown-FAS-1 input,
+#dropDown-FAS-1 label,
+#dropDown-FAS-2 input,
+#dropDown-FAS-2 label,
+#dropDown-FAS-3 input,
+#dropDown-FAS-3 label {
+    outline: none;
 }
 
 .dropDown-FAS-state {
